[metadata]
name = data_structures
version = 0.0.1

[flake8]
exclude = venv
max-line-length = 160

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[tool:pytest]
addopts = -v --cov ./src

[options]
install_requires =
  numpy
  pytest
  flake8
  pytest--cov
python_requires = >=3.7
package_dir =
  = src
